--- a/Programming-Lab14/Programming-Lab14.vcxproj
+++ b/Programming-Lab14/Programming-Lab14.vcxproj
@@ -139,7 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="input_helpers.c" />
     <ClCompile Include="Programming-Lab14.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="input-helpers.h" />
+    <ClInclude Include="structs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
