--- a/Programming-Lab14/Programming-Lab14.vcxproj
+++ b/Programming-Lab14/Programming-Lab14.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="input_helpers.c" />
+    <ClCompile Include="input-helpers.c" />
     <ClCompile Include="Programming-Lab14.c" />
   </ItemGroup>
   <ItemGroup>
