--- a/Programming-Lab14/Programming-Lab14.vcxproj.filters
+++ b/Programming-Lab14/Programming-Lab14.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Programming-Lab14.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="input_helpers.c">
+    <ClCompile Include="input-helpers.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
