--- a/Programming-Lab14/Programming-Lab14.vcxproj.filters
+++ b/Programming-Lab14/Programming-Lab14.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="input-helpers.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="output-helpers.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="math-helpers.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="structs.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="input-helpers.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="output-helpers.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="math-helpers.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
